<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_reset"
            android:id="@+id/button"
            android:layout_weight="1"
            android:onClick="onReset"
            style="@android:style/ButtonBar" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_blur"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:onClick="onBlur"
            style="@android:style/ButtonBar" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_canny"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:onClick="onCanny"
            style="@android:style/ButtonBar" />
    </LinearLayout>

    <ImageView
        android:contentDescription="@string/lab_name"
        android:id="@+id/process_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/team"
        android:padding="@dimen/default_img_padding"
        />
</LinearLayout>